--- a/src/app/common/sm-nav/sm-nav.component.html
+++ b/src/app/common/sm-nav/sm-nav.component.html
@@ -5,7 +5,7 @@
                 <a href="/home">Home</a>
             </li>
             <li>
-                <a href="/calendar">Agendá un entrevista</a>
+                <a href="/calendar">Agendá una entrevista</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/soledad-merino/" target="_blank">linkedin</a>
