--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,8 +3,12 @@
     <div class="call-to-action hidden-max">
       <h2>¡Llevemos tu proyecto al siguiente nivel!</h2>
       <a
-        href="/calendar">
+        href="/calendar" class="desktop">
         <button>Agendá una entrevista conmigo hoy mismo!</button>
+      </a>
+      <a
+        href="/calendar" class="mobile">
+        <button>Agendá una entrevista!</button>
       </a>
     </div>
     <div class="main">
@@ -68,8 +72,12 @@
     <div class="call-to-action">
       <h2>¡Llevemos tu proyecto al siguiente nivel!</h2>
       <a
-        href="/calendar">
+        href="/calendar" class="desktop">
         <button>Agendá una entrevista conmigo hoy mismo!</button>
+      </a>
+      <a
+        href="/calendar" class="mobile">
+        <button>Agendá una entrevista!</button>
       </a>
     </div>
   </div>
