--- a/src/app/common/sm-nav/sm-nav.component.scss
+++ b/src/app/common/sm-nav/sm-nav.component.scss
@@ -34,12 +34,12 @@ a {
     text-decoration: none;
     text-transform: uppercase;
     padding: 0.5rem 1rem 0.5rem 1rem;
-    color: white;//rgb(0, 181, 219);
+    color: white; //rgb(0, 181, 219);
 }
 
 a:hover {
     color: rgb(0, 181, 219);
-    text-shadow: rgba(5,235,255,255) 5px 2px 20px;//rgb(0, 181, 219) 1px 0 40px; //rgba(0,100,147,255) 1px 0 10px;
+    text-shadow: rgba(5, 235, 255, 255) 5px 2px 20px; //rgb(0, 181, 219) 1px 0 40px; //rgba(0,100,147,255) 1px 0 10px;
 }
 
 aside {
@@ -53,4 +53,101 @@ aside {
     transition-property: all;
     transition-duration: 150ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 1500px) {}
+
+/* Estilos para pantallas pequeñas (móviles) */
+@media (max-width: 1499px) {
+
+    header {
+        width: 15%;
+    }
+
+    .menu-btn {
+        width: 40px;
+        height: 20px;
+        margin-top: 30%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: all .2s ease-in-out;
+
+        &.is-open {
+
+            .menu-btn__burger {
+                transform: translateX(-50px);
+                background: transparent;
+            }
+
+            .menu-btn__burger::before {
+                transform: rotate(45deg) translate(35px, -35px);
+                background: rgb(0, 181, 219);
+                box-shadow: rgb(0, 100, 147) 1px 0 30px;
+            }
+
+            .menu-btn__burger::after {
+                transform: rotate(-45deg) translate(35px, 35px);
+                background: rgb(0, 181, 219);
+                box-shadow: rgb(0, 100, 147) 1px 0 30px;
+            }
+        }
+    }
+
+    .menu-btn__burger {
+        width: 60px;
+        height: 3px;
+        background: #fff;
+        border-radius: 5px;
+        transition: all .2s ease-in-out;
+    }
+
+    .menu-btn__burger::before,
+    .menu-btn__burger::after {
+        content: '';
+        position: absolute;
+        width: 40px;
+        height: 3px;
+        background: #fff;
+        border-radius: 5px;
+        transition: all .2s ease-in-out;
+    }
+
+    .menu-btn__burger::before {
+        transform: translateY(-16px);
+        z-index: 999;
+    }
+
+    .menu-btn__burger::after {
+        transform: translateY(16px);
+        z-index: 999;
+    }
+
+    ul {
+        display: none;
+
+        &.is-open {
+            display: block;
+            text-align: center;
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            padding-left: 0;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            background-color: black;
+            z-index: 2;
+            gap: 25px;
+            align-items: center;
+            justify-content: center;
+            margin-top: 40px;
+        }
+    }
+
+    li {
+        padding-bottom: 10px;
+    }
+
 }
