add tech corner

--- a/src/app/common/sm-nav/sm-nav.component.html
+++ b/src/app/common/sm-nav/sm-nav.component.html
@@ -9,6 +9,9 @@
                 <a href="/home" class="menu-item" >Home</a>
             </li>
             <li>
+                <a href="/tech-corner" class="menu-item">Rincón Tech</a>
+            </li>
+            <li>
                 <a href="/calendar" class="menu-item">Agendá una entrevista</a>
             </li>
             <li>
