--- a/src/app/pages/tech-corner/tech-corner.component.scss
+++ b/src/app/pages/tech-corner/tech-corner.component.scss
@@ -47,3 +47,34 @@ a {
 .card p {
     color: white;
 }
+
+
+@media (min-width: 1500px) {
+
+}
+
+@media (min-width: 850px) and (max-width: 1499px) {
+
+}
+
+@media (max-width: 1499px) {
+    .welcome {
+        font-size: x-large;
+    }
+
+    .list {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    a {
+        flex: 1;
+        text-decoration: none;
+    }
+
+    .card h3 {
+        font-size: large;
+        color: rgb(0, 181, 219);
+        margin: auto;
+    }
+}
