--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,9 @@
 
 :root {
   --sole-blue: #34365a;
+  --sole-light-blue: #67699d;
   --sole-pink: #DCB7CF;
+  --sole-dark-pink: #d786bb;
   --sole-white: #F0F0F0;
   }
 
