--- a/src/app/common/logo-enlace/logo-enlace.component.scss
+++ b/src/app/common/logo-enlace/logo-enlace.component.scss
@@ -33,11 +33,14 @@
 /* Estilos para pantallas pequeñas (móviles) */
 @media (max-width: 849px) {
     .logo {
-        right: 10px;
-        width: 30%;
+        text-align: right;
+        height: 5vh;
+        top: 0;
+        align-content: center;
+        background-color: var(--sole-blue);
     }
     
     .img-logo {
-        width: 100%;
+        width: 30%;
     }
 }
