--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -103,7 +103,7 @@ table tbody {
     grid-template-columns: repeat(3, 2fr);
   }
   .content {
-    height: 100vh;
+    grid-template-columns: repeat(3, 2fr);
   }
 
   .left-content {
@@ -264,14 +264,14 @@ table tbody {
 /* Estilos para pantallas pequeñas (móviles) */
 @media (max-width: 849px) {
 .container {
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   flex-direction: column;
 }
 
 .content-logo {
   flex: 1;
-  grid-column: 2/5;
-    grid-row: 2 ;
+  grid-column: 3/7;
+    grid-row: 3 ;
   	text-align: left;
 }
 
@@ -281,11 +281,11 @@ table tbody {
 }
 
 .logo {
-  font-size: xxx-large;
+  font-size: 10vw;
 }
 
 .img-logo {
-  width: 30px;
+  width: 6vw;
 }
 
 .content {
