--- a/src/app/pages/tech-hub/tech-hub.component.scss
+++ b/src/app/pages/tech-hub/tech-hub.component.scss
@@ -14,7 +14,6 @@
     margin: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 
 a {
@@ -26,7 +25,7 @@ a {
 .card {
     height: 7em;
     padding: 1em;
-    border:1px solid var(--sole-pink);
+    border: 1px solid var(--sole-pink);
     border-radius: 10px;
     overflow: hidden;
     white-space: normal;
@@ -50,26 +49,35 @@ a {
 
 
 @media (min-width: 1500px) {
-
+    .card {
+        margin-right: 4%;
+    }
 }
 
 @media (min-width: 850px) and (max-width: 1499px) {
-
+    .content {
+        margin-top: 5vh;
+    }
 }
 
 @media (max-width: 1499px) {
+    
+
     .welcome {
         font-size: x-large;
     }
 
     .list {
         flex-direction: column;
-        justify-content: space-between;
     }
 
     a {
         flex: 1;
         text-decoration: none;
+    }
+
+    .card {
+        margin-bottom: 4%;
     }
 
     .card h3 {
