--- a/src/app/pages/tech-hub/tech-hub.component.scss
+++ b/src/app/pages/tech-hub/tech-hub.component.scss
@@ -60,6 +60,12 @@ a {
     }
 }
 
+@media (max-width: 850px) {
+    .content {
+        margin-top: 8vh;
+    }
+}
+
 @media (max-width: 1499px) {
     
 
