--- a/src/app/pages/tech-hub/tech-hub.component.scss
+++ b/src/app/pages/tech-hub/tech-hub.component.scss
@@ -52,6 +52,9 @@ a {
     .card {
         margin-right: 4%;
     }
+    .content {
+        margin-top: 10vh;
+    }
 }
 
 @media (min-width: 850px) and (max-width: 1499px) {
