--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -11,11 +11,30 @@
             <div class="description">
                 <p>{{course.description}}</p>
             </div>
+            <div class="aditionals">
+                <h2>Contenido adicional</h2>
+                <p>{{course.aditionals}}</p>
+            </div>
+            <div class="support">
+                <h2>Soporte post-curso</h2>
+                <p>{{course.support}}</p>
+            </div>
             <div class="goals">
                 <h2>Objetivos</h2>
                 <ul>
                     <li *ngFor="let g of course.goals">{{g}}</li>
                 </ul>
+            </div>
+            <div class="requirements">
+                <h2>Requisitos</h2>
+                <ul>
+                    <li *ngFor="let r of course.requirements">{{r}}</li>
+                </ul>
+            </div>
+            <div class="price">
+                <h2 *ngIf="samePrice()" id="regular" class="currentPrice">Precio regular: {{course.price}}</h2>
+                <h2 *ngIf="!samePrice()" id="lanzamiento" class="currentPrice">Precio lanzamiento: {{course.launchPrice}}</h2>
+                <p *ngIf="!samePrice()" id="rebajado" class="through">Precio regular: {{course.price}}</p>
             </div>
         </div>
         <div class="video">
@@ -24,9 +43,10 @@
         </div>
     </div>
     <div class="call-to-action">
-        <button>Hacé click acá y codificá tu versión 2.0</button>
+        <a href="https://forms.gle/jSzeg4TR8vciweePA" target="_blank"><button>Hacé click acá y codificá tu versión 2.0</button></a>
     </div>
 </div>
 <ng-template #error>
     <app-error-page></app-error-page>
 </ng-template>
+
