--- a/src/app/pages/course/course.component.scss
+++ b/src/app/pages/course/course.component.scss
@@ -70,6 +70,7 @@ button {
     cursor: pointer;
     transition: 800ms ease all;
     outline: none;
+    margin-bottom: 2vh;
 }
 
 button:hover {
@@ -80,17 +81,16 @@ button:hover {
 }
 
 video {
-    height: 100%;
+    height: auto;
     width: 60%;
     border-radius: 10px;
     box-shadow: var(--sole-pink) 5px 5px 20px;
+    margin-top: 2vh;
 }
 
 iframe {
     height: 100%;
     width: 60%;
-    border-radius: 10px;
-    box-shadow: var(--sole-pink) 5px 5px 20px;
 }
 
 img {
@@ -98,7 +98,35 @@ img {
     position: relative;
 }
 
+.form {
+    text-align: center;
+    height: 115vh;
+    margin-top: 2vh;
+}
+
+.hidden {
+    display: none;
+}
+
+.price {
+    text-align: center;
+}
+
+.through {
+    font-family: jetbrains-regular;
+    text-decoration: line-through;
+    color: var(--sole-white);
+}
+
+.currentPrice {
+    color: var(--sole-dark-pink);
+}
+
 @media (min-width: 1500px) {
+    .content {
+        margin-top: 10vh;
+    }
+
     .info {
         display: grid;
         grid-auto-rows: minmax(100px, auto);
@@ -106,6 +134,11 @@ img {
     }
 
     .goals {
+        margin: auto;
+        width: 80%;
+    }
+
+    .requirements {
         margin: auto;
         width: 80%;
     }
@@ -125,12 +158,12 @@ img {
 
 @media (max-width: 1499px) {
 
-    
-    
+
+
     h1 {
         font-size: 8vw;
     }
-    
+
     .info {
         width: 90%;
         margin: auto;
@@ -140,15 +173,19 @@ img {
         width: 90%;
     }
 
+    .requirements {
+        width: 90%;
+    }
+
     video {
         width: 90%;
     }
 
     button {
         width: 80%;
-    height: auto;
-    font-size: 5vw;
-    margin-bottom: 4%;
+        height: auto;
+        font-size: 5vw;
+        margin-bottom: 4%;
     }
 
 }
