--- a/src/app/pages/post/post.component.scss
+++ b/src/app/pages/post/post.component.scss
@@ -18,6 +18,12 @@ iframe#document {
    margin: 0 30%;
 }
 
+@media (min-width: 1500px) {
+    .info {
+        margin-top: 10vh;
+    }
+}
+
 @media (min-width: 850px) and (max-width: 1499px) {
     iframe {
         height: 100em;
