--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -12,6 +12,12 @@
   	text-align: left;
 }
 
+.message {
+  grid-column: 2/3;
+  grid-row: 1 ;
+  text-align: center;
+}
+
 .tittle{
   position: relative; 
 	font-size: 1.5em;
@@ -21,6 +27,32 @@
   font-family: jetbrains-bold;
   font-size: 140px;
   color: var(--sole-pink);
+}
+
+h2 {
+  //background: -webkit-gradient(#74acdf, #ffffff, #74acdf);
+  background-image: linear-gradient(
+    45deg,
+    #74acdf 45%,
+    #ffffff 45%,
+    #ffffff 55%,
+    #74acdf 45%
+    );
+font-size: 2vw;
+font-family: jetbrains-bold;
+  
+  /* Set the background size and repeat properties. */
+  background-size: 100%;
+  background-repeat: repeat;
+
+  /* Use the text as a mask for the background. */
+  /* This will show the gradient as a text color rather than element bg. */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  
+  /* Animate the text when loading the element. */
+    /* This animates it on page load and when hovering out. */
+   // animation: rainbow-text-simple-animation-rev 0.75s ease forwards;
 }
 
 .img-logo {
@@ -279,6 +311,15 @@ table tbody {
 .tittle{
   position: relative; 
 	font-size: 1.5em;
+}
+
+.message {
+  grid-column: 2 / 7;
+  grid-row: 2;
+}
+
+h2 {
+  font-size: 3vh;
 }
 
 .logo {
