Se quita oferta lanzamiento en curso de microsevicios y animación argetina en página de inicio

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-<div class="message">
+<!--<div class="message">
   <h2>¡Gracias selección Argentina!</h2>
-</div>
+</div>-->
 <div class="content-logo">
   <div class="tittle">
     <h1 class="logo">{{logostart}}<img class="img-logo" src="{{imgLogo}}" alt="">{{logoend}}</h1>
