--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -26,7 +26,7 @@
             <a href="https://www.linkedin.com/in/soledad-merino/" target="_blank">
                 <img src="./../../../assets/images/linkedin-logo.png" alt="LinkedIn" class="icon" width="7.5%">
             </a>
-            <a href="https://www.instagram.com/sole2punto0/" target="_blank">
+            <a href="https://www.instagram.com/soledospuntocero/" target="_blank">
                 <img src="./../../../assets/images/instagram-logo.png" alt="Instagram" class="icon" width="10%">
             </a>
         </div>
